k8s-yamls/transaction-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  labels:
    app: transaction-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-api
  template:
    metadata:
      labels:
        app: transaction-api
    spec:
      containers:
      - name: transaction-api
        image: rahulkumartonk/poc-aml-monitoring/transaction-api:latest
        ports:
        - containerPort: 8080
