k8s-yamls/transaction-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-service
spec:
  selector:
    app: transaction-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
