k8s-yamls/transaction-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: transaction-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transaction-api-service
            port:
              number: 80
